fixed spacing on Members page

--- a/css/style.css
+++ b/css/style.css
@@ -158,8 +158,8 @@ figcaption {
 
 .friendsGrid {
   display: grid;
-  grid-template: repeat(3, 33em) / repeat(auto-fit, minmax(15em, 1fr));
-  grid-auto-rows: 33em;
+  grid-template: repeat(3, 35em) / repeat(auto-fit, minmax(15em, 1fr));
+  grid-auto-rows: 35em;
   grid-gap: 10px;
 }
 
